<?xml version="1.0" encoding="utf-8"?>
<!-- 
 ToDoCycleCalendar
 Copyright (C) 2012  Tohru Mashiko

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.

 -->
<menu
	 xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		 android:id="@+id/searchMenu"
		 android:title="@string/search_menu"
		 android:icon="@android:drawable/ic_menu_search">
	</item>
	<item
		 android:id="@+id/syncMenu"
		 android:title="@string/sync_menu"
		 android:icon="@android:drawable/ic_menu_rotate">
	</item>
	<item
		 android:id="@+id/aggregateCalculationMenu"
		 android:title="@string/ac_menu"
		 android:icon="@android:drawable/ic_menu_sort_by_size">
	</item>
	<item
		 android:id="@+id/backUpRestore"
		 android:title="@string/br_menu"
		 android:icon="@android:drawable/ic_menu_save">
	</item>
	<item
		 android:id="@+id/subcategoryEdit"
		 android:title="@string/sc_menu"
		 android:icon="@android:drawable/ic_menu_edit">
	</item>
	<item
		 android:id="@+id/about"
		 android:title="@string/about_menu"
		 android:icon="@android:drawable/ic_menu_info_details">
	</item>
	<item
		 android:id="@+id/endMenu"
		 android:title="@string/end_menu"
		 android:icon="@android:drawable/ic_menu_close_clear_cancel">
	</item>
</menu>
