<?xml version="1.0" encoding="utf-8"?>
<!-- 
 ToDoCycleCalendar
 Copyright (C) 2012  Tohru Mashiko

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.

 -->
<RelativeLayout
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 android:orientation="vertical"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 android:background="@color/tokiiro"
	 android:id="@+id/todoregistration"
>
	<LinearLayout
		 android:id="@+id/ll1"
		 android:orientation="horizontal"
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:gravity="center"
		 android:layout_alignParentBottom="true"
		 android:background="@color/tokiiro"
	>
		<Button
			 android:id="@+id/btsave"
			 android:layout_width="0dip"
			 android:layout_weight="1"
			 android:text="@string/save_btn"
			 android:onClick="tdSave"
			 android:visibility="visible"
			 android:layout_height="wrap_content"
			 android:layout_gravity="center_vertical|center_horizontal"
			 />
		<Button
			 android:id="@+id/btcancel"
			 android:layout_width="0dip"
			 android:layout_weight="1"
			 android:text="@string/cancel_btn"
			 android:onClick="tdCancel"
			 android:visibility="visible"
			 android:layout_height="wrap_content"
			 android:layout_gravity="center_vertical|center_horizontal"
			 />
	</LinearLayout>
	<ScrollView
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:layout_above="@id/ll1"
		 android:layout_alignParentTop="true"
	 >
		<LinearLayout
			 android:orientation="vertical"
			 android:layout_width="match_parent"
			 android:layout_height="wrap_content"
		 >
			<LinearLayout
				 android:orientation="horizontal"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center_vertical"
				 android:gravity="center_vertical"
			 >
				<TextView
					 android:id="@+id/tvtitle"
					 android:text="@string/sctitle"
					 android:textSize="14sp"
					 android:textStyle="bold"
					 android:textColor="@color/konpeki"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical"
				 />
				<EditText
					 android:hint="@string/sctitlehint"
					 android:id="@+id/ettitle"
					 android:inputType="text"
					 android:textSize="14sp"
					 android:layout_width="0dip"
					 android:layout_height="wrap_content"
					 android:layout_weight="1"
					 android:singleLine="true"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical"
				 />
				<ImageView
					 android:id="@+id/ivmicicon1"
					 android:src="@drawable/mic_pink"
					 android:contentDescription="@string/mic_btn"
					 android:layout_height="wrap_content"
					 android:layout_width="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:visibility="invisible">
				</ImageView>
			</LinearLayout>
			<LinearLayout
				 android:orientation="horizontal"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
			 >
				<TextView
					 android:id="@+id/tvpriority"
					 android:text="@string/tdpriority"
					 android:textSize="14sp"
					 android:textStyle="bold"
					 android:textColor="@color/konpeki"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical" />
				<Spinner
					 android:id="@+id/spriority"
					 android:layout_height="wrap_content"
					 android:layout_width="wrap_content"
					 android:prompt="@string/scalarmhint"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical" 
				 >
				</Spinner>
			</LinearLayout>
			<LinearLayout
				 android:orientation="horizontal"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center_vertical"
				 android:gravity="center_vertical"
			 >
				<TextView
					 android:id="@+id/tvtimeneeded"
					 android:text="@string/tdtimeneeded"
					 android:textSize="14sp"
					 android:textStyle="bold"
					 android:textColor="@color/konpeki"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical"
				 />
				<EditText
					 android:hint="@string/tdtimeneededhint"
					 android:id="@+id/ettimeneeded"
					 android:inputType="text"
					 android:textSize="14sp"
					 android:layout_width="match_parent"
					 android:layout_height="wrap_content"
					 android:singleLine="true"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical"
				 />
			</LinearLayout>
			<LinearLayout
				 android:orientation="horizontal"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
			 >
				<TextView
					 android:id="@+id/tvcategory"
					 android:text="@string/tdcategory"
					 android:textSize="14sp"
					 android:textStyle="bold"
					 android:textColor="@color/konpeki"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical" />
				<Spinner
					 android:id="@+id/scategory"
					 android:layout_height="wrap_content"
					 android:layout_width="wrap_content"
					 android:prompt="@string/scalarmhint"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical" 
				 >
				</Spinner>
			</LinearLayout>
			<LinearLayout
				 android:orientation="horizontal"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
			 >
				<TextView
					 android:id="@+id/tvsubcategory"
					 android:text="@string/tdsubcategory"
					 android:textSize="14sp"
					 android:textStyle="bold"
					 android:textColor="@color/konpeki"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical" />
				<Spinner
					 android:id="@+id/ssubcategory"
					 android:layout_height="wrap_content"
					 android:layout_width="wrap_content"
					 android:prompt="@string/scalarmhint"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical" 
				 >
				</Spinner>
			</LinearLayout>
			<LinearLayout
				 android:orientation="horizontal"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
			 >
				<TextView
					 android:id="@+id/tvcompletion"
					 android:text="@string/tdcompletion"
					 android:textSize="14sp"
					 android:textStyle="bold"
					 android:textColor="@color/konpeki"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:paddingTop="10dip"
					 android:paddingBottom="20dip"
				 />
				<CheckBox
					 style="@style/checkbox_gray"
					 android:layout_height="wrap_content"
					 android:id="@+id/cbcompletion"
					 android:layout_width="wrap_content"
					 android:textSize="14sp"
					 android:checked="false">
				</CheckBox>
			</LinearLayout>
			<LinearLayout
				 android:orientation="horizontal"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center_vertical"
			 >
				<TextView
					 android:id="@+id/tvcontent"
					 android:text="@string/tdcontent"
					 android:textSize="14sp"
					 android:textStyle="bold"
					 android:textColor="@color/konpeki"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical"
				 />
				<ImageView
					 android:id="@+id/ivmicicon2"
					 android:src="@drawable/mic_pink"
					 android:contentDescription="@string/mic_btn"
					 android:layout_height="wrap_content"
					 android:layout_width="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical"
				 />
			</LinearLayout>
			<LinearLayout
				 android:orientation="horizontal"
				 android:layout_width="match_parent"
				 android:layout_height="wrap_content"
				 android:layout_gravity="center_vertical"
			 >
				<TextView
					 android:id="@+id/tvdamy"
					 android:text="@string/scdamy"
					 android:textSize="14sp"
					 android:textStyle="bold"
					 android:textColor="@color/konpeki"
					 android:layout_width="wrap_content"
					 android:layout_height="wrap_content"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical"
					 android:visibility="invisible"
				 />
				<EditText
					 android:hint="@string/tdcontenthint"
					 android:id="@+id/etcontent"
					 android:textSize="14sp"
					 android:textColor="@color/tetsukon"
					 android:layout_width="match_parent"
					 android:layout_height="wrap_content"
					 android:text=""
					 android:minLines="6"
					 android:layout_gravity="center_vertical"
					 android:gravity="center_vertical"
				 />
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</RelativeLayout>