<?xml version="1.0" encoding="utf-8"?>
<!-- 
 ToDoCycleCalendar
 Copyright (C) 2012  Tohru Mashiko

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.

 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 android:orientation="vertical"
	 android:background="@color/white" >
	<RelativeLayout
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:id="@+id/rlCalendar"
		 android:background="@color/white">
		<TextView
			 android:id="@+id/yearMonth"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:textSize="26sp"
			 android:layout_centerHorizontal="true"
			 android:layout_centerVertical="true" >
		</TextView>
	</RelativeLayout>
	<LinearLayout
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:id="@+id/llCalendar"
		 android:paddingLeft="6dp"
		 android:paddingRight="6dp"
		 android:background="@color/white">
		<TextView
			 android:gravity="center_horizontal"
			 android:id="@+id/tvSunday"
			 android:background="@color/kokin"
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:text="@string/sunday"
			 android:layout_weight="1"
			 android:textSize="16sp"
			 android:textColor="@color/white" >
		</TextView>
		<TextView
			 android:gravity="center_horizontal"
			 android:id="@+id/tvMonday"
			 android:background="@color/wasurenagusa"
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:text="@string/monday"
			 android:layout_weight="1"
			 android:textSize="16sp"
			 android:textColor="@color/kurocha" >
		</TextView>
		<TextView
			 android:gravity="center_horizontal"
			 android:id="@+id/tvTuesday"
			 android:background="@color/wasurenagusa"
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:text="@string/tuesday"
			 android:layout_weight="1"
			 android:textSize="16sp"
			 android:textColor="@color/kurocha" >
		</TextView>
		<TextView
			 android:gravity="center_horizontal"
			 android:id="@+id/tvWednesday"
			 android:background="@color/wasurenagusa"
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:text="@string/wednesday"
			 android:layout_weight="1"
			 android:textSize="16sp"
			 android:textColor="@color/kurocha" >
		</TextView>
		<TextView
			 android:gravity="center_horizontal"
			 android:id="@+id/tvThursday"
			 android:background="@color/wasurenagusa"
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:text="@string/thursday"
			 android:layout_weight="1"
			 android:textSize="16sp"
			 android:textColor="@color/kurocha" >
		</TextView>
		<TextView
			 android:gravity="center_horizontal"
			 android:id="@+id/tvFriday"
			 android:background="@color/wasurenagusa"
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:text="@string/friday"
			 android:layout_weight="1"
			 android:textSize="16sp"
			 android:textColor="@color/kurocha" >
		</TextView>
		<TextView
			 android:gravity="center_horizontal"
			 android:id="@+id/tvSaturday"
			 android:background="@color/konai"
			 android:layout_height="wrap_content"
			 android:layout_width="match_parent"
			 android:text="@string/saturday"
			 android:layout_weight="1"
			 android:textSize="16sp"
			 android:textColor="@color/white" >
		</TextView>
	</LinearLayout>
	<ViewFlipper
		 android:layout_width="match_parent"
		 android:layout_height="match_parent"
		 android:id="@+id/vfCalendar" >
		<GridView android:id="@+id/gvCalendar"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 android:background="@color/white">
		</GridView>
	</ViewFlipper>
</LinearLayout>